# WarrenGameCustomLibs

./: changes.txt  compileSourcesHowTo.txt  projectDescription.txt
customLibs/: CMakeLists.txt
customLibs/libraries/genericLib/: CMakeLists.txt
customLibs/libraries/genericLib/sources/arithmetic/: customArithmetic.cpp  customArithmetic.h
customLibs/libraries/genericLib/sources/customTypes/: caseAnim.cpp  caseAnim.h  positionTypes.cpp  positionTypes.h
customLibs/libraries/genericLib/sources/fileSystem/: copyFilesAndDirectories.cpp  copyFilesAndDirectories.h  createNewElementFs.cpp  createNewElementFs.h  fileSystem.h  pathsConcatenate.cpp  pathsConcatenate.h
customLibs/libraries/genericLib/sources/logging/: logFile.cpp  logFile.h  logsStruct.cpp  logsStruct.h
customLibs/libraries/genericLib/sources/matrices/: matrix2D.h  matrix3D.h  matrixStructs.cpp  matrixStructs.h
customLibs/libraries/genericLib/sources/random/: randomGenerator.cpp  randomGenerator.h
customLibs/libraries/genericLib/sources/texts/: textLoader.cpp  textLoader.h
customLibs/libraries/genericLib/sources/time/: accurateTime.cpp  accurateTime.h  dateAndTime.cpp  dateAndTime.h
customLibs/libraries/graphicalTextParagraph/: CMakeLists.txt
customLibs/libraries/graphicalTextParagraph/sources/paragraph/: makeTextTextures.cpp  makeTextTextures.h  paragraphData.cpp  paragraphData.h
customLibs/libraries/joystickTests/: CMakeLists.txt
customLibs/libraries/joystickTests/sources/joystickContexts/: joystickInfosInterface.cpp  joystickInfosInterface.h
customLibs/libraries/joystickTests/sources/joystickData/: joystickCalibr.cpp  joystickCalibr.h  joystickGraphicsValues.cpp  joystickGraphicsValues.h
customLibs/libraries/sdl2_wrapper/: CMakeLists.txt
customLibs/libraries/sdl2_wrapper/sources/advancedDrawing/interfaceGeneratorLanguage/: interfaceGeneratorConsts.h
customLibs/libraries/sdl2_wrapper/sources/advancedDrawing/interfaceGeneratorLanguage/elementsLoadingFunctions/: fontsScriptLoader.cpp  fontsScriptLoader.h  textsBlocksComponent.cpp  textsBlocksComponent.h  texturesComponent.cpp  texturesComponent.h
customLibs/libraries/sdl2_wrapper/sources/advancedDrawing/interfaceGeneratorLanguage/optionsStructs/: colorComponent.cpp  colorComponent.h  fontsOptions.cpp  fontsOptions.h  texturesOptions.cpp  texturesOptions.h
customLibs/libraries/sdl2_wrapper/sources/advancedDrawing/texturesDrawing/: 2dimTexturesDrawing.cpp  2dimTexturesDrawing.h  3dimTexturesDrawing.cpp  3dimTexturesDrawing.h  animTexturesDrawing.cpp  animTexturesDrawing.h  constAnimationDrawing.cpp  constAnimationDrawing.h
customLibs/libraries/sdl2_wrapper/sources/advancedDrawing/texturesLoading/: 2dimTexturesLoading.cpp  2dimTexturesLoading.h  3dimTexturesLoading.cpp  3dimTexturesLoading.h  animFileTextures.cpp  animFileTextures.h  fileTexturesList.cpp  fileTexturesList.h
customLibs/libraries/sdl2_wrapper/sources/consts/: fontsPaths.h
customLibs/libraries/sdl2_wrapper/sources/initialization/: sdl2MixerInit.cpp  sdl2MixerInit.h  sdl2ModuleInit.cpp  sdl2ModuleInit.h  sdl2TTF_Init.cpp  sdl2TTF_Init.h
customLibs/libraries/sdl2_wrapper/sources/joystick/: joystickEntity.cpp  joystickEntity.h
customLibs/libraries/sdl2_wrapper/sources/keycodes/: keycodesOverload.cpp  keycodesOverload.h
customLibs/libraries/sdl2_wrapper/sources/prefPath/: prefPathFinder.cpp  prefPathFinder.h
customLibs/libraries/sdl2_wrapper/sources/sounds/: loadSound.cpp  loadSound.h
customLibs/libraries/sdl2_wrapper/sources/text/: sdl2ttf_font.cpp  sdl2ttf_font.h
customLibs/libraries/sdl2_wrapper/sources/texturing/: horizontalGradientTexture.cpp  horizontalGradientTexture.h  loadSDL2.cpp  loadSDL2.h  rendererWindow.cpp  rendererWindow.h  sdl2_sprite.cpp  sdl2_sprite.h  textureLoader.cpp  textureLoader.h  texturePosition.cpp  texturePosition.h  texturesCombo.cpp  texturesCombo.h  verticalGradientTexture.cpp  verticalGradientTexture.h
customLibs/libraries/sdl2_wrapper/sources/versioning/: makeStringFromVersion.cpp  makeStringFromVersion.h
customLibs/libraries/sdl2_wrapper/sources/widgets/buttons/: 3TexturesButtonWidget.cpp  3TexturesButtonWidget.h  buttonFlatWidget.cpp  buttonFlatWidget.h  highlightButtonWidget.cpp  highlightButtonWidget.h  textButtonWidget.cpp  textButtonWidget.h
customLibs/libraries/sdl2_wrapper/sources/widgets/editBoxes/: bool_editBox.cpp  bool_editBox.h  boxesIncludes.h  sint_editBox.cpp  sint_editBox.h  stringEditBox.cpp  stringEditBox.h  uint_editBox.cpp  uint_editBox.h
customLibs/libraries/sdl2_wrapper/sources/widgets/editBoxes/subObjects/: boolBoxContentDisplay.cpp  boolBoxContentDisplay.h  boxContentDisplay.cpp  boxContentDisplay.h  boxEvents.cpp  boxEvents.h  boxRectDisplay.cpp  boxRectDisplay.h  cursorDrawing.cpp  cursorDrawing.h  editBoxes_consts.h
customLibs/libraries/sdl2_wrapper/sources/wrappers/: hapticPtrWrapper.h  joystickPtrWrapper.h  mixerPtrWrapper.h  rectStream.cpp  rectStream.h  sdl2_ptr.h  ttfPtrWrapper.h
customLibs/libraries/sdlLogoDisplay/: CMakeLists.txt
customLibs/libraries/sdlLogoDisplay/sources/sdlLogoDisplay/: logoDispContext.cpp  logoDispContext.h  sdlVersionDisplay.cpp  sdlVersionDisplay.h
customLibs/libraries/soundSystem/: CMakeLists.txt
customLibs/libraries/soundSystem/sources/soundSystem/: soundChannelsSystem.cpp  soundChannelsSystem.h  soundSystem.cpp  soundSystem.h  soundsListLoader.cpp  soundsListLoader.h  soundsPathsConsts.h  soundsPlayer.cpp  soundsPlayer.h  soundsVolume.cpp  soundsVolume.h
customLibs/libraries/spriteMoveLib/: CMakeLists.txt
customLibs/libraries/spriteMoveLib/sources/spriteMove/: createPathData.cpp  createPathData.h  moveConsts.h  moveInfos.h  moveVectorSeriesHandle.cpp  moveVectorSeriesHandle.h  movements.cpp  movements.h  objectMove.cpp  objectMove.h  orientation.cpp  orientation.h  pathVector.cpp  pathVector.h  pi.h  spriteMoveData.cpp  spriteMoveData.h  starType.cpp  starType.h
customLibs/libraries/wxPrefPath/: CMakeLists.txt
customLibs/libraries/wxPrefPath/sources/prefPath/: wxPrefPath.cpp  wxPrefPath.h
